[package]
name = "am-backup"
version = "0.1.0"
edition = "2024"

[dependencies]
crypt_guard = "1.4.2"
thiserror = "2.0.18"
tokio = { version = "1", features = ["fs", "io-util", "rt", "rt-multi-thread"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
